--- a/package.json
+++ b/package.json
@@ -22,14 +22,17 @@
     "vite": "^4.5.0"
   },
   "dependencies": {
+    "@lukemorales/query-key-factory": "^1.3.2",
     "@tanstack/react-query": "^5.4.3",
     "@tanstack/react-query-devtools": "^5.4.3",
     "@vitejs/plugin-react": "^4.1.0",
     "axios": "^1.6.0",
     "cross-fetch": "^4.0.0",
+    "part-regex": "^0.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "vike": "^0.4.144",
-    "vike-react": "^0.3.0"
+    "vike-react": "^0.3.0",
+    "zustand": "^4.4.6"
   }
 }
